feat(swagger): update swaggerui
